--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,25 +1,48 @@
 {% extends "index.html" %}
 
 {% block content %}
-
 <div class="row">
    <div class="col-lg-12 text-center">
        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
    </div>
+   <div class="col-lg-12 mb-4">
+
+    {%if current_list == "top_rated"%}
+    <a href="{{ url_for('homepage', list_type='top_rated') }}" class="btn btn-primary">Top Rated</a>
+    {%else%}
+    <a href="{{ url_for('homepage', list_type='top_rated') }}" class="btn btn-outline-info">Top Rated</a>
+    {%endif%}
+
+    {%if current_list == "upcoming"%}
+    <a href="{{ url_for('homepage', list_type='upcoming') }}" class="btn btn-primary">Upcoming</a>    
+    {%else%}    
+    <a href="{{ url_for('homepage', list_type='upcoming') }}" class="btn btn-outline-info">Upcoming</a>
+    {%endif%}
+    
+    {%if current_list == "popular"%}
+    <a href="{{ url_for('homepage', list_type='popular') }}" class="btn btn-primary">Popular</a>
+    {%else%}
+    <a href="{{ url_for('homepage', list_type='popular') }}" class="btn btn-outline-info">Popular</a>
+    {%endif%}
+
+    {%if current_list == "now_playing"%}
+    <a href="{{ url_for('homepage', list_type='now_playing') }}" class="btn btn-primary">Now Playing</a>
+    {%else%}
+    <a href="{{ url_for('homepage', list_type='now_playing') }}" class="btn btn-outline-info">Now Playing</a>
+    {%endif%}
+
+   </div>
+
    {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
-           <!-- <img class="card-img-top" src="http://placehold.it/300x500" alt=""> -->
-           <!-- <img src="{{ tmdb_image_url(movie.poster_path, "w780") }}"> -->
            <img class="card-img-top" src="{{ tmdb_image_url(movie.poster_path, 'w780') }}" alt="">
-           
            <div class="card-body">
                <h4 class="card-title">{{ movie.title }}</h4>
            </div>
            <div class="card-footer text-center">
                <a href="{{ url_for('movie_details', movie_id=movie.id) }}">Pokaż więcej</a>
-               <!-- <a href="#" class="btn btn-primary">Pokaż więcej</a> -->
            </div>
        </div>
    </div>
